sparta-compat-options/releaseTests/testJSR308Bad/expected
..\..\testfiles\testJSR308\A.java:7: error: ')' expected
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                                        ^
..\..\testfiles\testJSR308\A.java:7: error: <identifier> expected
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                                                 ^
..\..\testfiles\testJSR308\A.java:7: error: <identifier> expected
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                                                      ^
..\..\testfiles\testJSR308\A.java:7: error: cannot find symbol
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                                                     ^
  symbol:   class b
  location: class A
..\..\testfiles\testJSR308\A.java:7: error: cannot find symbol
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                                         ^
  symbol:   class DATABASE
  location: class A
..\..\testfiles\testJSR308\A.java:7: error: missing method body, or declare abstract
    public static void r(byte [] /*@Sink(DATABASE)*/ b){
                       ^
6 errors
